# crypto-cash-be

./: .dockerignore  .gitignore  Dockerfile  compose.dev.yml  compose.yml  email-template.mjml  entrypoint.sh  pyproject.toml
currencies/: admin.py  filters.py  managers.py  models.py  schemas.py  serializer.py  serializers.py  urls.py  views.py
currencies/migrations/: 0001_initial.py  0002_blockchainasset_cryptocoin_blockchainasset_coin_and_more.py  0003_alter_cryptocoin_coingecko_id_and_more.py  0004_cryptocategory_alter_cryptocoin_extra_data_and_more.py  0005_cryptonetwork_icon.py  0006_cryptocoin_slug.py  0007_alter_cryptocoin_slug.py  0008_blockchainasset_service_fee_fixed_usd_and_more.py
currencies/tasks/: __init__.py  crypto.py  fiat.py
currencies/utils/: api.py  schemas.py
currencies/views/: __init__.py  admin.py  default.py
mail/templatetags/: mail_tags.py
project/: celery.py  pagination.py  urls.py
project/settings/: __init__.py  base.py  celery.py
project/utils/: cryptography.py  serializers.py
users/: admin.py  exceptions.py  mixins.py  models.py  serializers.py  urls.py  validators.py
users/migrations/: 0001_initial.py  0002_create_default_currency.py  0003_alter_currency_code_alter_user_first_name_and_more.py  0004_currency_time_created_currency_time_updated_and_more.py  0005_user_totp_enabled.py  0006_user_date_of_birth_useractiontoken.py  0007_remove_useractiontoken_date_of_birth_useractioncode.py  0008_useractiontoken_value_alter_user_email.py  0009_alter_useractiontoken_action_type.py  (+2 more)
users/tasks/: email.py
wallets/: models.py
(+20 files in other folders)
